<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.homework4_1.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_taskEditFragment"
            app:destination="@id/taskEditFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.homework4_1.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.homework4_1.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
    </fragment>
    <fragment
        android:id="@+id/taskEditFragment"
        android:name="com.example.homework4_1.ui.home.content.tasks.TaskEditFragment"
        android:label="fragment_task_edit"
        tools:layout="@layout/fragment_task_edit" >
        <argument
            android:name="task"
            app:argType="com.example.homework4_1.ui.home.content.tasks.Task"/>
        <argument
            android:name="new"
            app:argType="boolean" />
        <argument
            android:name="lastType"
            app:argType="com.example.homework4_1.ui.home.content.tasks.TypeOfTask" />
    </fragment>

    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.example.homework4_1.ui.profile.EditProfileFragment"
        android:label="fragment_edit_profile"
        tools:layout="@layout/fragment_edit_profile" />

</navigation>